--- a/src/components/Resume/index.scss
+++ b/src/components/Resume/index.scss
@@ -6,11 +6,12 @@
 
   .text-zone {
     position: absolute;
-    left: 12%;  /* Move text slightly more to the right */
+    left: 12%; /* Move text slightly more to the right */
     top: 80%;
     transform: translateY(-50%);
-    width: 40%;  /* Expand text block width */
+    width: 40%;
   }
+  
   .text-zone {
     width: 45%;
     padding-right: 40px;
@@ -44,21 +45,42 @@
   }
 
   .resume-wrap {
-    width: 50%;
-    height: 115%;
-    float: right;
-    margin-top: -7.5%;
-    margin-right: 120px;
-    border-radius: 10px;
-    overflow: hidden;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 250px;
+    margin-top: 20px;
 
-  @media screen and (max-width: 1200px) {
-    .resume-wrap {
-      float: none;
-      margin: 0;
-      width: 100%;
+    .photo-circle {
+      width: 400px;
       height: 400px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-bottom: 20px;
+      
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+      }
+    }
+
+    .download-button {
+      font-size: 16px;
+      padding: 10px 20px;
+      border: 2px solid #000000;
+      background: transparent;
+      color: #000000;
+      border-radius: 4px;
+      cursor: pointer;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: opacity 0.3s ease;
+
+      &:hover {
+        opacity: 0.8;
+      }
     }
   }
 }
